fixed spacing issues in the landing section

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h1 {
     font-size: 2.25rem;
     font-weight: 300;
     color: #fff;
-    margin: 2em 0;
+    margin: 0;
 }
 
 h1+p {
@@ -72,6 +72,8 @@ h2+p {
     padding: 0 0.5em 2em;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    min-height: 50vh;
 }
 
 .header-text {
